--- a/src/inject.scss
+++ b/src/inject.scss
@@ -1,39 +1,56 @@
-#auto-fullscreen-image-contianer {
+.--auto-fullscreen-image-contianer {
     z-index: 999999;
     position: fixed;
     top: 0px;
     height: 100vh;
     width: 100vw;
     background-color: rgba(0,0,0,0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     user-select: none;
 
-    .fullscreen-image.fit-screen {
-        object-fit: contain;
+    &.fit-viewport {
+
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img.fullscreen-image {
+            object-fit: contain;
+    
+            &.horizontal {
+                width: 100vw;
+                height: 100vh;
+            }
+    
+            &.vertical {
+                width: 100vh;
+                height: 100vw;
+            }
+        }
+    }
+
+    &.custom-size {
+
+        overflow: auto;
+
+        img.fullscreen-image {
+            display: block;
+            margin: 0 auto;
+        }
+        
     }
     
-    .fullscreen-image.fit-screen.horizontal {
-        width: 100vw;
-        height: 100vh;
-    }
 
-    .fullscreen-image.fit-screen.vertical {
-        width: 100vh;
-        height: 100vw;
-    }
-
-    #fullscreen-image-tools-container {
+    .--fullscreen-image-tools-container {
         position: fixed;
-        right: 0px;
+        top: 0;
+        right: 20px;
         width: 50px;
         height: 100%;
 
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-
 
         &:hover svg {
             display: block;
@@ -54,7 +71,7 @@
 }
 
 
-overlay-root#auto-fullscreen-overlay-root{
+overlay-root.--auto-fullscreen-overlay-root{
     candidate-overlay {
         position: absolute;
         opacity: 0.5;
