--- a/src/inject/inject.scss
+++ b/src/inject/inject.scss
@@ -1,4 +1,4 @@
-.--auto-fullscreen-image-contianer {
+.--auto-fullscreen-contianer {
     z-index: 999999;
     position: fixed;
     top: 0px;
@@ -72,7 +72,7 @@
 
 
 overlay-root.--auto-fullscreen-overlay-root{
-    candidate-overlay {
+    target-overlay {
         position: absolute;
         opacity: 0.5;
         background-color: rgb(255, 102, 102);
